Added width to the forgot password page

--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -5,7 +5,7 @@
 
 <body>
 <div class="container" style="height: 663px;padding: -1px;width: 100%;">
-    <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
+    <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px; width: 75%;">
         <div class="card-body p-0">
             <!--This div holds the barn picture and the text boxes for the forgotten passwords-->
             <div class="row">
@@ -23,7 +23,7 @@
                         </div>
                         <form class="user">
                             <!--This is where the user inputs their email and we can see the filler text of enter email address-->
-                            <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="font-size: 18px;"></div><button class="btn btn-primary btn-block text-white btn-user"
+                            <div class="form-group"><input class="form-control form-control-user" type="email" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="font-size: 18px;"></div><button class="btn btn-primary btn-block text-white btn-user"
                                 type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Reset Password</button></form>
                         <div class="text-center">
                             <!--This is the links we see on the bottom that go to create accounts and login pages-->
