Added width to the create account page, added an image to the summer camp, and added the image itself to the GitHub

--- a/views/summerCamp.hbs
+++ b/views/summerCamp.hbs
@@ -3,7 +3,7 @@
 <!--Date: 11/10/2019-->
 <!--Description: This is the body of the summerCamp page-->
 
-<div data-bs-parallax-bg="true" style="height: 480px;background-image: url(&quot;images/IMG_0431.JPG?h=9deff3b51a942192fc5acd99f737094b&quot;);background-position: bottom;background-size: cover;background-repeat: no-repeat;"></div>
+<div data-bs-parallax-bg="true" style="height: 480px;background-image: url(&quot;images/DSC_3684.jpeg&quot;);background-position: bottom;background-size: cover;background-repeat: no-repeat;"></div>
 <div style="background-color: #fffdfa;">
     <div class="container">
         <div class="row">
