This page now has consistent coloring

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -3,26 +3,27 @@
 <!--Date: 11/10/2019-->
 <!--Description: This is the body of the contact page-->
 
-<body>
+<body style = "background-color: #fffdfa;">
 <!--This div holds the background image of the people and the barn-->
 <div data-bs-parallax-bg="true" style="height: 500px;background-image: url(&quot;images/5250707815_fd50e478be_o.jpg?h=6615a1e01a721d92fd3de7e4ca912708&quot;);background-position: center;background-size: cover;"></div>
 
 <!--This is holding the text that says want to get in contact with us-->
 <div class="article-list" style="margin: 0px;background-color: #fffdfa;">
-    <div class="container" style="padding-top: 0px;">
+    <div class="container" style="padding-top: 0px; background-color: #fffdfa;">
         <div class="intro">
             <h2 class="text-center" style="padding-top: 100px;font-size: 38px;">Contact<br></h2>
             <p class="text-center" style="font-size: 20px;">Want to get in contact with us? You've come to the right place!</p>
         </div>
     </div>
-</div>
+
+
 <!--This is the part that says when Sprout Creek is open-->
-<div class="article-list">
-    <div class="col-md-12" style="padding-top: 15px;margin-top: 80px;">
-        <header>
+<div class="article-list" style = "background-color: #fffdfa;">
+    <div class="col-md-12" style="padding-top: 15px;margin-top: 80px; style = background-color:#fffdfa;">
+        <header style = "background-color: #fffdfa;">
             <p class="text-center" style="font-size: 25px;color: rgb(49,52,55);"><strong>Hours</strong></p>
         </header>
-        <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;">We Are Open Everyday, 7 Days a week, 10:00 AM to 5:00 PM.</p>
+        <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;">We Are Open Everyday, 7 Days a week, 11:00 AM to 4:00 PM.</p>
     </div>
     <div class="col-md-12" style="padding-top: 35px;">
         <header>
@@ -41,4 +42,7 @@
     <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 20px;">You can either contact us via E-Mail or phone.<br><br>We'll get back to you shortly&nbsp;<br><br>Phone Number: +1 (845) 485-8438<br>E-Mail: info@sproutcreekfarm.org&nbsp;<br><br></p>
 </div>
 <div class="projects-horizontal" style="background-color: rgb(255,253,250);"></div>
+
+
+</div>
 </body>
