Added comments, fixed paths, and added new javascript files

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,8 +50,8 @@
     <script src="/javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
     <script src="/javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
-    <script src="/bootstrap/js//bs-animation.js?h=009e1093d04bef4d964ccf07197400d3"></script>
-    <script src="/bootstrap/js/javascripts/bs-charts.js?h=08ba999e06fc97f895c72848bddb91c1"></script>
+    <script src="/bootstrap/js/bs-animation.js?h=009e1093d04bef4d964ccf07197400d3"></script>
+    <script src="/bootstrap/js/bs-charts.js?h=08ba999e06fc97f895c72848bddb91c1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
@@ -61,9 +61,11 @@
     <script src="/bootstrap/js/cart.js?h=66e43e4e02fe90f22c60cb6f3009905b"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="/bootstrap/js/paymentPage.js?h=4e608b48fff1ea5dffa039eb883dac8e"></script>
+    <script src="/javascripts/paymentPage.js?h=4e608b48fff1ea5dffa039eb883dac8e"></script>
     <script src="/bootstrap/js/slider-hover.js?h=c1e4ccc027c05db2a63a66297f1c4871"></script>
     <script src="/bootstrap/js/theme.js?h=6d33b44a6dcb451ae1ea7efc7b5c5e30"></script>
+    <script src="/javascripts/addItem.js"></script>
+    <script src="/javascripts/login.js"></script>
     <script src="/javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 </head>
 
