--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -22,14 +22,14 @@
                         <form class="user" style="height: 343px;" action = "api/create_account" method = "post">
                             <div class="form-group row">
                                 <!-- This is the first name field-->
-                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="First Name" name="first_name" style="font-size: 18px;"></div>
+                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="firstName" placeholder="First Name" name="firstName" style="font-size: 18px;"></div>
                                 <!-- This is the last name field-->
-                                <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="Last Name" name="last_name" style="font-size: 18px;"></div>
+                                <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="lastName" placeholder="Last Name" name="lastName" style="font-size: 18px;"></div>
                             </div>
                             <!-- This is the user name field-->
                             <div class="form-group"><input class="form-control form-control-user" type="text" id="username"  placeholder="Username" name="username" style="font-size: 18px;"></div>
                             <!-- This is the email address field-->
-                            <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email Address" name="email" style="font-size: 18px;"></div>
+                            <div class="form-group"><input class="form-control form-control-user" type="email" id="email" aria-describedby="emailHelp" placeholder="Email Address" name="email" style="font-size: 18px;"></div>
                             <!-- This is password fields-->
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="password" id="password" placeholder="Password" name="password" style="font-size: 18px;"></div>
