--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-    <title>SproutCreekFarm</title>
+    <title>{{title}}</title>
+
 
     <!--Import all images-->
     <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png">
