--- a/views/market.hbs
+++ b/views/market.hbs
@@ -26,7 +26,7 @@
                                         <div class="about">
                                             <div class="rating" style="margin-top: 20px;">
                                                 <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
-                                                <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);width: 450px;height: 106px;overflow-y: auto;">{{itemdesc}}<br></p>
+                                                <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);width: 450px;height: 106px;overflow-y: auto; word-break: break-word!important;">{{itemdesc}}<br></p>
                                             </div>
                                         </div>
                                     </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart1" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
