--- a/views/marketItem.hbs
+++ b/views/marketItem.hbs
@@ -18,7 +18,7 @@
                 </div>
                 <div class="summary">
                     <h3 style="margin-top: 20px;font-size: 22px;height: 29px;color: rgb(98,100,112);"><strong>Description:</strong><br><br></h3>
-                    <p id="descriptionItem" style="margin-top: 15px;font-size: 20px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.</p>
+                    <p id="descriptionItem" style="margin-top: 15px; word-break:break-word!important; font-size: 20px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.</p>
                 </div>
             </div>
             <div><label class="d-none d-md-block" for="quantity" style="font-size: 22px;color: rgb(98,100,112);"><strong>Quantity:</strong><input type="number" id="quantity" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;" min="1"></label></div>
