--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -73,7 +73,7 @@
 <!--This is the nav bar section of the layout-->
 <body style="background-color: #fffaf2;">
     <nav class="navbar navbar-light navbar-expand-lg sticky-top shadow navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
-        <div class="container-fluid"><a href = "/"><img class="img-fluid" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;"></a>
+        <div class="container-fluid"><a href = "/"><img class="img-fluid" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;"></a>
             <div><a class="navbar-brand text-left float-left" href="/" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
             <!--This is the button to go home that looks like the Sprout Creek Farm logo-->
             <button
@@ -125,7 +125,7 @@
                 <div class="row">
                     <!--Here is the logo-->
                     <div class="col-sm-6 col-md-3 item">
-                        <ul></ul><img src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
+                        <ul></ul><img src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
                     <div class="col-sm-6 col-md-3 item">
                         <ul>
                           <!--These are the links on the bottom-->
