Forgot Password / Market Item Update
Adds functionality to forgot password page and market item page

--- a/views/marketItem.hbs
+++ b/views/marketItem.hbs
@@ -23,7 +23,7 @@
                     <p id="descriptionItem" style="margin-top: 15px; word-break:break-word!important; font-size: 20px;color: rgb(98,100,112);">{{itemdesc}}</p>
                 </div>
             </div>
-            <div><label class="d-none d-md-block" for="quantity" style="font-size: 22px;color: rgb(98,100,112);"><strong>Quantity:</strong><input type="number" id="quantity" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;" min="1"></label></div>
+            <div><label class="d-none d-md-block" for="quantity" style="font-size: 22px;color: rgb(98,100,112);"><strong>Quantity:</strong><input type="number" id="quantity" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;" min ="1" max="{{quantity}}"></label></div>
             <button
                 class="btn btn-primary btn-block" type="button" style="margin-top: 30px;background-color: rgb(79,121,96);height: 50px;font-size: 22px;"><i class="icon-basket"></i>&nbsp;Add to Cart</button>
         </div>
