--- a/views/marketItem.hbs
+++ b/views/marketItem.hbs
@@ -1,13 +1,15 @@
-<header></header><a href="#" style="font-size: 20px;margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);">Back To Previous Page</a>
-<div class="container border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 900px;">
+<header></header>
+</br>
+<a onclick=window.history.back(); style="font-size: 20px;margin-left: 40px;margin-top:25px;color: rgb(133,135,150);">Back To Previous Page</a>
+<div class="container border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;margin-bottom:60px;max-width: 900px;">
   {{#each item}}
 
-    <div class="row justify-content-center align-items-center" style="margin-top: 0px;margin-right: 0px;margin-left: 0px;margin-bottom: 0px;padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;">
-        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="margin-top: 30px;padding: 0px;padding-right: 0px;margin-right: 6px;">
+    <div class="row justify-content-center align-items-center" style="margin-top: 15px;margin-right: 0px;margin-left: 0px;margin-bottom: 0px;padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;">
+        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="margin-top: 30px; margin-bottom: 30px; padding: 0px;padding-right: 0px;margin-right: 6px;">
             <div class="gallery">
                 <div class="sp-wrap"><a href="images/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="images/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a><a href="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a><a href="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a></div>
-            </div><img src="{{itemimagelink}}" style="background-position: center;background-size: auto;margin-bottom: 20px;width: 250px;"></div>
-        <div class="col-auto col-md-auto col-lg-auto col-xl-auto" style="margin-bottom: 30px;padding-top: 12px;padding-right: 25px;padding-bottom: 12px;padding-left: 25px;">
+            </div><img src="{{itemimagelink}}" style="background-position: center;background-size: auto;margin-bottom: 20px;width: 250px; padding-right:15px;"></div>
+        <div class="col-auto col-md-auto col-lg-auto col-xl-auto" style="width:80%; margin-bottom: 30px;padding-top: 12px;padding-right: 25px;padding-bottom: 12px;padding-left: 25px;">
             <div class="info">
                 <h3 class="text-center" style="margin-top: 5px;font-size: 25px;height: 37px;color: rgb(98,100,112);"><strong><em>{{itemname}}</em></strong></h3>
                 <div class="price">
@@ -20,7 +22,7 @@
                 </div>
                 <div class="summary">
                     <h3 style="margin-top: 20px;font-size: 22px;height: 29px;color: rgb(98,100,112);"><strong>Description:</strong><br><br></h3>
-                    <p id="descriptionItem" style="margin-top: 15px; word-break:break-word!important; font-size: 20px;color: rgb(98,100,112);">{{itemdesc}}</p>
+                    <p id="descriptionItem" style="height: 50px;margin-top: 15px; word-break:break-word!important; font-size: 20px;color: rgb(98,100,112); overflow-y:auto;">{{itemdesc}}</p>
                 </div>
             </div>
             <div><label class="d-none d-md-block" for="quantity" style="font-size: 22px;color: rgb(98,100,112);"><strong>Quantity:</strong><input type="number" id="quantity" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;" min ="1" max="{{quantity}}"></label></div>
