Fixes Payment Page
fixes submit issue on payment page

--- a/Unconverted/assets/css/untitled.css
+++ b/Unconverted/assets/css/untitled.css
@@ -3,6 +3,11 @@
   flex-wrap: wrap;
   margin-right: -.75rem;
   margin-left: -.75rem;
-  overflow: auto;
+  /*overflow-y: auto;*/
+}
+
+.text-break {
+  word-break: break-word!important;
+  overflow-wrap: break-word!important;
 }
 
