Added validation for the text fields, and I will be doing more testing on it shortly

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -59,7 +59,7 @@
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="/bootstrap/js/Sprout-Creek-Shopping-Cart-1.js?h=975b2635c9a06eae9f47d6cae8158a12"></script>
     <script src="/bootstrap/js/Sprout-Creek-Shopping-Cart.js?h=417b03f5f0a4f9f27f8c248f532eb5af"></script>
-    <script src="/bootstrap/js/cart.js?h=66e43e4e02fe90f22c60cb6f3009905b"></script>
+     <!--<script src="/bootstrap/js/cart.js?h=66e43e4e02fe90f22c60cb6f3009905b"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
     <script src="/javascripts/paymentPage.js?h=4e608b48fff1ea5dffa039eb883dac8e"></script>
