--- a/views/check_out.hbs
+++ b/views/check_out.hbs
@@ -4,7 +4,7 @@
 <!--Description: This is the body of the checkout page-->
 
 
-<header></header><a href="shopingCart.html" style="font-size: 20px;margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);">Back To Cart</a>
+<header></header><a href="/cart" style="font-size: 20px;margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);">Back To Cart</a>
 <main class="page payment-page">
     <section class="clean-block payment-form dark">
         <div class="text-center block-heading" style="margin-top: 0px;">
@@ -13,7 +13,7 @@
         </div>
         <div class="container border rounded shadow-sm" style="margin-top: 50px;padding-top: 20px;padding-bottom: 20px;padding-right: 20px;background-color: #ffffff;"><button class="btn btn-primary" id="backToShipping" type="button" style="background-color: rgb(137,140,149);display: none;margin-top: 10px;margin-bottom: 30px;">Back To Shipping Information</button>
             <div class="form-group">
-                <form>
+                <form >
                     <div id="shipping" class="card-details" style="margin-top: 10px;">
                         <h3 class="title" style="font-size: 30px;"><strong>Delivery Details</strong></h3>
                         <p style="margin-top: 40px;font-size: 22px;">Choose Your Preferred Method Of Delivery</p>
@@ -23,27 +23,110 @@
                         <p style="margin-top: 40px;font-size: 22px;margin-bottom: 30px;">Please Fill Out The Information Below</p>
                         <div id="shipToAddress" style="display:block;">
                             <div class="form-row" style="padding-left: 10px;">
+
                                 <div class="col-sm-7" id="recipientName">
-                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Recipient Name</strong></label><input class="form-control" type="text" id="recipientName" placeholder="Recipient Name" minlength="1" required=""></div>
+
+                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Recipient Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="Recipient Name" minlength="1" required=""></div>
+
+                                    <script type = "text/javascript">
+                                      function verifyName(name, id){
+                                        var nameRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                        if(nameRegEx.test(name) != true){
+                                          alert("Please use letters in the name field");
+                                        }
+                                      }
+                                    </script>
+                                  <!--<button onclick = "verifyName()">Hi</button>-->
                                 </div>
                                 <div class="col-sm-7" id="phoneNumber" style="height: 87px;">
-                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number</strong></label><input class="form-control" type="tel" id="phoneNumber" placeholder="Phone Number" required="" minlength="1" inputmode="tel"></div>
+                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number</strong></label><input class="form-control" type="tel" onchange="verifyPhoneNum(this.value, id)" id="phoneNumber" placeholder="Phone Number" required="" minlength="1" inputmode="tel">
+                                      <script type = "text/javascript">
+                                        function verifyPhoneNum(number, id){
+                                          var phoneNum = new RegExp("^(?=.*[0-9])");
+                                          if(phoneNum.test(number) != true){
+                                            alert("Please use only numbers");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                                 <div class="col-sm-8" id="address1">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 1</strong></label><input class="form-control" type="text" id="shippingAddress1" placeholder="Address 1" required="" minlength="1"></div>
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 1</strong></label><input class="form-control" type="text" onchange="verifyAddress(this.value, id)"  id="shippingAddress1" placeholder="Address 1" required="" minlength="1">
+                                      <script type = "text/javascript">
+                                        function verifyAddress(address, id){
+                                          var address1 = new RegExp("^(?=.*[0-9])");
+                                          var address2 = new RegExp("^(?=.*[a-zA-Z])");
+                                          var splitAddress = address.split(" ");
+
+                                          var nameRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                          if(address1.test(splitAddress[0]) != true){
+                                            alert("Please use numbers first and letter after for the address field");
+                                          }else if(address2.test(address) != true){
+                                            alert("Please use letters after the numbers for the address field");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                                 <div class="col-sm-8" id="address2">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 2</strong></label><input class="form-control" type="text" id="shippingAddress2" placeholder="Address 2"></div>
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 2</strong></label><input class="form-control" type="text" onchange="verifyAddress2(this.value, id)" id="shippingAddress2" placeholder="Address 2">
+                                      <script type = "text/javascript">
+                                        function verifyAddress2(address, id){
+                                          var address1 = new RegExp("^(?=.*[0-9])");
+                                          var address2 = new RegExp("^(?=.*[a-zA-Z])");
+                                          var splitAddress = address.split(" ");
+
+                                          var nameRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                          if(address1.test(splitAddress[0]) != true){
+                                            alert("Please use numbers first and letter after for the address field");
+                                          }else if(address2.test(address) != true){
+                                            alert("Please use letters after the numbers for the address field");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                                 <div class="col-sm-8 col-xl-5 offset-xl-0" id="city">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>City</strong></label><input class="form-control" type="text" id="shippingCity" placeholder="City" required="" minlength="1"></div>
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>City</strong></label><input class="form-control" onchange = "verifyCity(this.value, id)" type="text" id="shippingCity" placeholder="City" required="" minlength="1">
+                                      <script type = "text/javascript">
+                                        function verifyCity(city, id){
+                                          var cityRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                          if(cityRegEx.test(city) != true){
+                                            alert("Please use only letters in the city field");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                                 <div class="col-sm-8 col-xl-3" id="zipCode">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Zip Code</strong></label><input class="form-control" type="text" id="shippingZipCode" placeholder="Zip Code" required="" minlength="1" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/"
-                                            inputmode="numeric"></div>
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Zip Code</strong></label><input class="form-control" type="text" onchange = "verifyCard(this.value, id)" id="shippingZipCode" placeholder="Zip Code" required="" minlength="1" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/"
+                                            inputmode="numeric">
+                                        <script type = "text/javascript">
+                                          function verifyCard(cardNumber, id){
+
+                                            var visa = new RegExp("^(?:4[0-9]{12}(?:[0-9]{3})?)");
+                                            var mastercard = new RegExp("^5[1-5][0-9]{14}$");
+                                            var amex = new RegExp("3[47][0-9]{13}$");
+                                            var discover = new RegExp("6(?:011|5[0-9]{2})[0-9]{12}");
+
+                                            if(visa.test(cardNumber) != true || mastercard.test(cardNumber) != true || amex.test(cardNumber) != true || discover.test(cardNumber != true)){
+                                              alert("Please use either a mastercard, amex, visa, or discover card");
+                                            }
+                                          }
+                                        </script>
+                                    </div>
                                 </div>
                                 <div class="col-sm-8 col-xl-3" id="state">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State</strong></label><input class="form-control" type="text" id="shippingState" placeholder="State" required="" minlength="1"></div>
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State</strong></label><input class="form-control" type="text" id="shippingState" onchange = "verifyState(this.value, id)" placeholder="State" required="" minlength="1">
+                                      <script type = "text/javascript">
+                                        function verifyState(state, id){
+                                          var stateRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                          if(stateRegEx.test(state) != true){
+                                            alert("Please use only letters in the city field");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -124,18 +207,88 @@
                         <h3 class="title" style="font-size: 30px;margin-bottom: 40px;"><strong>Credit Card Details</strong></h3>
                         <div class="form-row">
                             <div class="col-sm-7">
-                                <div class="form-group"><label for="card-holder">Card Holder</label><input class="form-control" type="text" id="cardHolder" placeholder="Card Holder"></div>
+                                <div class="form-group"><label for="card-holder">Card Holder</label><input class="form-control" type="text" id="cardHolder" onchange = "verifyCardHolder(this.value, id)" placeholder="Card Holder">
+                                  <script type = "text/javascript">
+                                    function verifyCardHolder(cardHolder, id){
+                                      var cardHolderRegEx = new RegExp("^(?=.*[a-zA-Z])");
+                                      if(cardHolderRegEx.test(cardHolder) != true){
+                                        alert("Please use your name in the card holder field");
+                                      }
+                                    }
+                                  </script>
+                                </div>
                             </div>
                             <div class="col-sm-5">
                                 <div class="form-group"><label>Expiration date</label>
-                                    <div class="input-group expiration-date"><input class="form-control" type="text" id="monthExpr" placeholder="MM"><input class="form-control" type="text" id="yearExpr" placeholder="YY"></div>
+                                    <div class="input-group expiration-date"><input class="form-control" type="text" id="monthExpr" onchange = "verifyExpiration(this.value, id)" placeholder="MM"><input class="form-control" type="text" id="yearExpr" onchange = "verifyExpirationYear(this.value, id)" placeholder="YY">
+                                      <script type = "text/javascript">
+                                        function verifyExpiration(expirationMonth, id){
+                                          var expirationDateRegEx = new RegExp("^(?=.*[0-9])");
+                                          if(expirationDateRegEx.test(expirationMonth) != true){
+                                            alert("Please use two numbers for the expiration month");
+                                          }
+                                        }
+                                        </script>
+                                        <script type = "text/javascript">
+                                        function verifyExpirationYear(expirationYear, id){
+                                          var expirationDateRegEx = new RegExp("^(?=.*[0-9])");
+                                          if(expirationDateRegEx.test(expirationYear) != true){
+                                            alert("Please use two numbers for the expiriation year");
+                                          }
+                                        }
+                                      </script>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-8">
-                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" type="text" id="cardNumber" placeholder="Card Number"></div>
+                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" type="text" onchange = "verifyCard(this.value, id)" id="cardNumber" placeholder="Card Number">
+                                  <script type = "text/javascript">
+                                    function verifyCard(cardNumber, id){
+
+                                      var visa = new RegExp("^(?:4[0-9]{12}(?:[0-9]{3})?)");
+                                      var mastercard = new RegExp("^5[1-5][0-9]{14}$");
+                                      var amex = new RegExp("3[47][0-9]{13}$");
+                                      var discover = new RegExp("6(?:011|5[0-9]{2})[0-9]{12}");
+
+                                      var amexCard = false;
+                                      var validCard = false;
+                                      if(visa.test(cardNumber) == true){
+                                        validCard = true;
+                                        alert("Visa is accepted");
+                                      }else if(mastercard.test(cardNumber) == true ){
+                                        validCard = true;
+                                        alert("Mastercard is accepted");
+                                      }else if(amex.test(cardNumber) == true){
+
+                                        amexCard = true;
+                                        alert("Amex is accepted");
+                                      }else if(discover.test(cardNumber) == true){
+                                        validCard = true;
+                                        alert("Discover is accepted");
+                                      }else{
+                                        alert("Please enter a valid Mastercard, Visa, Amex, or Discover card");
+                                      }
+                                    }
+                                  </script>
+                                </div>
                             </div>
                             <div class="col-sm-4">
-                                <div class="form-group"><label for="cvc">CVC</label><input class="form-control" type="text" id="cvc" placeholder="CVC" minlength="3" maxlength="4"></div>
+                                <div class="form-group"><label for="cvc">CVC</label><input class="form-control" type="text" onchange = "verfiyCVC(this.value, id)" id="cvc" placeholder="CVC" minlength="3" maxlength="4">
+                                <script type = "text/javascript">
+                                  function verifyCVC(cvc, id){
+                                    var cvcRegExp = new RegExp("^\d{4}$");
+                                    var cvc3RegExp = new RegExp("^\d{3}$");
+                                    alert("hi");
+                                    if((cvcRegExp.test(cvc) == true){
+                                      alert("Amex uses 4");
+                                    }else if((cvc3RegExp.text(cvc) == true){
+                                      alert("Valid");
+                                    }else{
+                                      alert("Please use a code that is valid");
+                                    }
+                                  }
+                                </script>
+                              </div>
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-group"><button class="btn btn-primary btn-block" id="confirmPurchase" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;">Confirm Purchase</button></div>
