updated cart files

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -29,7 +29,7 @@
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto quantity"><label class="d-none d-md-block" for="quantity" style="font-size: 18px;"><strong>Quantity</strong></label><input type="number" id="number" class="form-control quantity-input" value="{{quantity}}"></div>
                                        <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto price"
                                            style="margin-top: 5px;"><span style="font-size: 20px;padding-top: 0px;">${{total}}</span></div>
-                                       <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto"><button class="btn btn-primary" type="button" style="background-color: rgb(105,108,119);padding-top: 6px;margin-top: 5px;">Remove</button></div>
+                                       <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto"><button class="btn btn-primary" type="button" onClick="removeFromCart({{itemId}}, {{quantity}});"style="background-color: rgb(105,108,119);padding-top: 6px;margin-top: 5px;">Remove</button></div>
                                    </div>
                                    {{/each}}
                                </div>
@@ -49,3 +49,36 @@
            </div>
        </section>
    </main>
+
+   <script>
+   function removeFromCart(itemId, amount) {
+     var json = JSON.stringify({
+       "itemId" : itemId,
+       "amount" : amount,
+       "isAdding": false
+     });
+     console.log(json);
+     // make the api call
+     fetch("/api/addToCart",
+       {method: "POST",
+         headers: {
+         "Accept": "application/json",
+         "Content-Type": "application/json"
+       },
+       body : json
+     })
+     .then(function(response) {
+       if (response.status !== 200) {
+         console.log("Problem with ajax call! " + response.status
+             + " msg: " + response.value);
+         return
+       } else {
+         // send to a webpage
+         response.text().then(function(data) {
+           location.reload();
+         });
+       }
+
+     });
+   }
+   </script>
