--- a/views/login.hbs
+++ b/views/login.hbs
@@ -25,7 +25,7 @@
                               <div class="form-group"><input class="form-control form-control-user" type="text" id="username" onchange = "verifyUserName(this.value, id)" placeholder="Username" name="username" style="font-size: 18px;">
                               <script type = "text/javascript">
                                 function verifyUserName(username, id){
-                                  var userNameRegExp = new RegExp("^(?=.*[a-zA-Z0-9])");
+                                  var userNameRegExp = new RegExp(/^[a-z0-9]+$/i);
                                   if(userNameRegExp.test(username) != true){
                                     if(username == ""){
                                       alert("Please enter a username");
