--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -25,7 +25,7 @@
                                 <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="firstName" placeholder="First Name" onchange = "verifyFirstName(this.value, id)" name="firstName" style="font-size: 18px;">
                                 <script type = "text/javascript">
                                   function verifyFirstName(firstname, id){
-                                    var firstNameRegExp = new RegExp("^(?=.*[a-zA-Z])");
+                                    var firstNameRegExp = new RegExp(/^[A-Za-z]+$/);
                                     if(firstNameRegExp.test(firstname) != true){
                                       alert("Please enter only letters for the first name field");
                                     }
@@ -36,7 +36,7 @@
                                 <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="lastName" onchange = "verifyLastName(this.value, id)" placeholder="Last Name" name="lastName" style="font-size: 18px;">
                                   <script type = "text/javascript">
                                     function verifyLastName(lastname, id){
-                                      var lastnameRegExp = new RegExp("^(?=.*[a-zA-Z])");
+                                      var lastnameRegExp = new RegExp(/^[A-Za-z]+$/);
                                       if(lastnameRegExp.test(lastname) != true){
                                         alert("Please enter only letters for the last name field");
                                       }
@@ -48,7 +48,7 @@
                             <div class="form-group"><input class="form-control form-control-user" type="text" id="username"  onchange = "verifyUserName(this.value, id)" placeholder="Username" name="username" style="font-size: 18px;">
                               <script type = "text/javascript">
                                 function verifyUserName(username, id){
-                                  var usernameRegExp = new RegExp("/^[a-zA-Z0-9])");
+                                  var usernameRegExp = new RegExp(/^[a-zA-Z0-9]+$/);
                                   if(usernameRegExp.test(username) != true){
                                     alert("Please only use letters and numbers in your username");
                                   }
