User pages are in

--- a/views/user_dashboard-view_orders.hbs
+++ b/views/user_dashboard-view_orders.hbs
@@ -1,3 +1,109 @@
+<div style="margin-top: 30px;margin-bottom: 50px;">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
+                  <h1 style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
+              </div>
+          </div>
+          <div class="row justify-content-center" style="margin-bottom: 50px;">
+              <div class="col-xl-4 offset-xl-3 m-auto" style="margin-top: 10px;margin-bottom: 15px;">
+                  <div class="card shadow border-left-primary py-2" style="margin-top: 10px;margin-bottom: 10px;">
+                      <div class="card-body">
+                          <div class="row text-center align-items-center no-gutters">
+                              <div class="col-xl-9 text-center mr-2">
+                                  <div class="text-uppercase text-primary font-weight-bold text-xs mb-1" style="height: 28px;"><span style="font-size: 16px;">GoAT POINT BALANCE</span></div>
+                                  <div class="text-dark font-weight-bold h5 mb-0"><span style="font-size: 22px;">20 Goat Point(s)</span></div>
+                              </div>
+                              <div class="col-auto" style="font-size: 20px;"><i class="fas fa-money-bill fa-2x text-gray-300"></i></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xl-6"></div>
+          </div>
+          <div class="row justify-content-center align-items-center" style="height: 100%;">
+              <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
+                  <div class="card">
+                      <div class="card-header">
+                          <ul class="nav nav-tabs card-header-tabs">
+                              <li class="nav-item"><a class="nav-link" href="/login" style="font-size: 20px;">Dashboard</a></li>
+                              <li class="nav-item"><a class="nav-link active" href="/user_dashboard/view_orders" style="font-size: 20px;">Orders(s)</a></li>
+                              <li class="nav-item"><a class="nav-link" href="/user_dashboard/edit_information" style="font-size: 20px;">Account Details</a></li>
+                          </ul>
+                      </div>
+                      <div class="card-body">
+                          <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Order(s)</h4>
+                          <div class="col align-self-center m-auto">
+                              <div class="table-responsive" style="margin-top: 40px;padding: 10px;">
+                                  <table class="table table-hover">
+                                      <thead>
+                                          <tr>
+                                              <th>Order ID</th>
+                                              <th>Order Quantity</th>
+                                              <th>Order Price</th>
+                                              <th>Order Date</th>
+                                          </tr>
+                                      </thead>
+                                      <tbody>
+                                          <tr>
+                                              <td>Cell 1</td>
+                                              <td>Cell 2</td>
+                                              <td>Cell 2</td>
+                                              <td>Cell 2</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                          </tr>
+                                      </tbody>
+                                  </table>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+<!--
 <h2> USER ACCOUNT VIEW ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 
@@ -6,7 +112,7 @@
   <li> <a href="/user_dashboard"> Main </a> </li>
   <li> <a href="/user_dashboard/view_orders"> View Orders </a> </li>
   <li> <a href="/user_dashboard/edit_information"> Edit Information </a> </li>
-</ul>
+</ul> -->
 
 <input type=button value="logout" onClick="eraseCookie()"/>
 
