--- a/views/user_dashboard-edit_info.hbs
+++ b/views/user_dashboard-edit_info.hbs
@@ -1,3 +1,104 @@
+<div style="margin-top: 30px;margin-bottom: 50px;">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
+                  <h1 style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
+              </div>
+          </div>
+          <div class="row justify-content-center" style="margin-bottom: 50px;">
+              <div class="col-xl-4 m-auto" style="margin-top: 10px;margin-bottom: 15px;">
+                  <div class="card shadow border-left-primary py-2" style="margin-top: 10px;margin-bottom: 10px;">
+                      <div class="card-body">
+                          <div class="row text-center align-items-center no-gutters">
+                              <div class="col-xl-9 text-center mr-2">
+                                  <div class="text-uppercase text-primary font-weight-bold text-xs mb-1" style="height: 28px;"><span style="font-size: 16px;">GoAT POINT BALANCE</span></div>
+                                  <div class="text-dark font-weight-bold h5 mb-0"><span style="font-size: 22px;">20 Goat Point(s)</span></div>
+                              </div>
+                              <div class="col-auto" style="font-size: 20px;"><i class="fas fa-money-bill fa-2x text-gray-300"></i></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xl-6"></div>
+          </div>
+          <div class="row justify-content-center align-items-center" style="height: 100%;">
+              <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
+                  <div class="card">
+                      <div class="card-header">
+                          <ul class="nav nav-tabs card-header-tabs">
+                              <li class="nav-item"><a class="nav-link" href="/login" style="font-size: 20px;">Dashboard</a></li>
+                              <li class="nav-item"><a class="nav-link" href="/user_dashboard/view_orders" style="font-size: 20px;">Order(s)</a></li>
+                              <li class="nav-item"><a class="nav-link active" href="/user_dashboard/edit_information" style="font-size: 20px;">Account Details</a></li>
+                          </ul>
+                      </div>
+                      <div class="card-body">
+                          <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Account Details</h4>
+                          <div class="col align-self-center m-auto">
+                              <div class="table-responsive" style="margin-top: 25px;padding: 10px;height: 544px;">
+                                  <table class="table table-hover">
+                                      <thead>
+                                          <tr></tr>
+                                      </thead>
+                                      <tbody>
+                                          <tr>
+                                              <td>Username</td>
+                                              <td id="firstName" contenteditable="false">johnDoe</td>
+                                          </tr>
+                                          <tr>
+                                              <td>First Name</td>
+                                              <td id="firstName" contenteditable="false">John</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Last Name</td>
+                                              <td id="lastName" contenteditable="false">Doe</td>
+                                          </tr>
+                                          <tr>
+                                              <td>E-Mail</td>
+                                              <td id="eMail" contenteditable="false">john.doe@email.com</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Phone Number (Home)</td>
+                                              <td id="phoneNumberHome" contenteditable="false">9304809348290</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Phone Number (Mobile)</td>
+                                              <td id="phoneNumberMobile" contenteditable="false">034823948229</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Address (1)</td>
+                                              <td id="addressOne" contenteditable="false">50 Fake Street</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Address (2)</td>
+                                              <td id="addressTwo" contenteditable="false">504 B Suite</td>
+                                          </tr>
+                                          <tr>
+                                              <td>City</td>
+                                              <td id="cityName" contenteditable="false">Poughkeepsie</td>
+                                          </tr>
+                                          <tr>
+                                              <td>State</td>
+                                              <td id="stateName" contenteditable="false">NY</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Zip Code</td>
+                                              <td id="zipCode" contenteditable="false">12601</td>
+                                          </tr>
+                                          <tr>
+                                              <td contenteditable="false">Gender</td>
+                                              <td id="genderCode" contenteditable="false">M</td>
+                                          </tr>
+                                      </tbody>
+                                  </table>
+                              </div>
+                          </div><button class="btn btn-primary" id="editAccountInformation" type="button" style="background-color: rgb(79,121,96);margin-top: 15px;font-size: 18px;">Edit Information</button><button class="btn btn-primary text-center" id="sumbitChanges"
+                              type="button" style="background-color: rgb(100,117,207);margin-top: 15px;font-size: 18px;display:none;">Submit Changes</button><button class="btn btn-primary" id="cancelChanges" type="button" style="background-color: rgb(129,130,133);margin-top: 15px;font-size: 18px;display: none;">Cancel</button></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+<!--
 <h2> USER ACCOUNT EDIT INFO PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <script src="../javascripts/updateAccount.js" async></script>
@@ -7,7 +108,7 @@
   <li> <a href="/user_dashboard"> Main </a> </li>
   <li> <a href="/user_dashboard/view_orders"> View Orders </a> </li>
   <li> <a href="/user_dashboard/edit_information"> Edit Information </a> </li>
-</ul>
+</ul> -->
 
 <form>
   <table>
